[tool.poetry]
name = "python-heroku-api"
version = "0.1.0"
description = ""
authors = ["Felipe <dasilva.felipex93@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.1"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
